<resources>
    <string name="app_name">TeamD-DonationApp</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_chats">Chats</string>
    <string name="title_account">Account</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="home_fab">Create Post</string>
    <string name="home_textview_my_items">My Given Items</string>
    <string name="home_textview_my_claimed_items">My Claimed Items</string>
    <string name="uploaded_picture">Uploaded Picture</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_description">Enter Item Description</string>
    <string name="enter_location">Enter Location</string>
    <string name="select_photo">Select Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="post">Post</string>
    <string name="item_name">Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="claimed_by">Claimed By: </string>
    <string name="user_name">User Name</string>
    <string name="chat">Chat</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="finish_transaction">Finish Transaction</string>
    <string name="atjhu">@jhu.edu</string>
    <string name="claim_item">Claim</string>
    <string name="posted_by">Posted By:</string>
    <string-array name="spinner_category">
        <item>Food</item>
        <item>Book</item>
        <item>Clothes</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>