<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewClaimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:importantForAutofill="no"
                    android:text="@string/claimed_by"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textViewClaimerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:importantForAutofill="no"
                    android:text="@string/user_name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imageViewItemAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/uploaded_picture"
                    android:visibility="gone"
                    tools:srcCompat="@tools:sample/avatars" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/buttonDeny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="40dp"
                    android:onClick="onClickDeny"
                    android:text="@string/deny"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>


                <Button
                    android:id="@+id/buttonAccept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="40dp"
                    android:onClick="onClickAccept"
                    android:text="@string/accept"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="40dp"
                    android:onClick="onClickChat"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/chat"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    />





            </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/item_name"
                android:importantForAutofill="no"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewItemDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"

                android:gravity="start|top"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/location"
                android:importantForAutofill="no"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"

                android:hint="@string/category"
                android:importantForAutofill="no"

                android:textSize="16sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageViewItemImageDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/uploaded_picture"
            tools:srcCompat="@tools:sample/avatars" />


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonFinishTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="40dp"
        android:onClick="onClickFinishTransaction"
        android:text="@string/finish_transaction"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        android:textStyle="bold" />


</LinearLayout>
    </ScrollView>
